# liblsoda

./: .gitignore  CMakeLists.txt  LICENSE  Make.inc  Makefile  README.md
cmake/: find_libsbml.cmake
orig/lsoda-lh3/: lsoda.c
orig/lsoda-orig/: address  answer  daxpy.c  ddot.c  dgefa.c  dgesl.c  dscal.c  example.c  idamax.c  lsoda.c  lsoda.doc  makefile  mytok.c  readme
orig/lsoda-rainwoodman/: Makefile  cfode_static.c  ddot.c  dgesl.c  lsoda.c  lsoda.h  main.c  stoda.c  test2.c
src/: CMakeLists.txt  Makefile  common.h  intdy.c  lsoda.c  lsoda.h  lsoda_internal.h  prja.c  stoda_internal.c
test/: CMakeLists.txt  Makefile  test.c
test-sbml/: CMakeLists.txt  testSBML.cpp
